# LaplaceKernelSearch

./: .gitignore  .gitmodules  Comparing_GPyTorch_STAN.ipynb  Evaluation.ipynb  Evaluation_hardcoded.ipynb  Experimentations-Copy1.ipynb  Experimentations.ipynb  GaussianProcess.py  LICENSE  Laplace_config_creation.py  config_creation.py  data_functions.py  data_generation_experiment.py  defaultOptions.py  experiment_functions.py  globalParams.py  gp_classes.py  hardcoded_main.py  helpFunctions.py  helper_functions.py  kernelSearch.py  lbfgs_MWE.ipynb  lenze_experiments.py  likelihood_visualization.ipynb  main.py  main_KV.py  metrics.py  parameter_eval.ipynb  plotting_functions.py  pyproject.toml  stan_MWE.py  temp.ipynb  test.ipynb  test.stan  test1.py
evaluation/: Evaluation_hardcoded.ipynb
examples/: likelihood_visualization.ipynb  temp.ipynb
examples/datasets/: broaden.csv  v_lines.csv
exploration_tests/: CO2_exploration.ipynb  Exploration 42.ipynb  Exploration_experiments.ipynb  asdf.ipynb  grad_sem_test.ipynb  gradsem_ODE.ipynb  linear.ipynb  nested_sampling_test.ipynb  period+RBF.ipynb  periodic.ipynb
scripts/: bayes_opt.ipynb  bo_script.py  fast_data_experiments.ipynb  gridsearch.py  gridsearch_eval.ipynb  lodegp_non_control_issue.ipynb  manual_ml.ipynb  marimo_test.py  mauna_loa.py  mauna_loa_experiments copy.ipynb  mauna_loa_experiments.ipynb  minimal_k_sum_deriv.ipynb  minimal_laplace_inconsistency.ipynb  minimal_laplace_inconsistency.py  missing_obs.ipynb  temp.ipynb  testjup.ipynb  warping_test.ipynb  warping_test.py
src/: metrics.py
(+31 files in other folders)
