[build-system]
requires = ["hatchling >= 1.26", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "laplace_model_selection"
description = "A python package containing various metrics, including the Laplace approximation of the likelihood."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Andreas Besginow", email = "andreas.besginow@th-owl.de"},
]
requires-python = ">=3.12.9"
dynamic=["version"]

[tool.hatch.version]
source = "vcs"